Add stress test generator CLI (#2072)
* initial commit prompt and resource boilerplate/logic

* Add stress generator test project

* Add generator prompt tests

* Snapshot prompt for resources

* Prompt for multiple resources

* Add common prompt multiple question method

* Support resource index as selector

* Add property help text to prompt

* Add template rendering logic, template assets. Simplify generator prompting code

* Add template properties and writing logic

* Updates and test fixes

* Parse/replace multiple template properties on same line

* Simplify Properties/OptionalProperties functions

* Add nested+optional with resource tests

* Update tests and support nullable in prompt type switch

* Update ToString() for network chaos file path generation

* Add StressTestPackage class. Enable nullable as error

* Use StressTestPackage resource generation as top level entrypoint

--- a/tools/stress-cluster/chaos/examples/network-stress-example/templates/network_loss.yaml
+++ b/tools/stress-cluster/chaos/examples/network-stress-example/templates/network_loss.yaml
@@ -3,6 +3,9 @@ kind: NetworkChaos
 metadata:
   name: "{{ .Release.Name }}-{{ .Release.Revision }}"
   namespace: {{ .Release.Namespace }}
+  annotations:
+    'experiment.chaos-mesh.org/pause': 'true'
+
 spec:
   action: loss
   direction: to
