--- a/tools/test-proxy/docker/dockerfile-win
+++ b/tools/test-proxy/docker/dockerfile-win
@@ -1,4 +1,4 @@
-FROM mcr.microsoft.com/dotnet/sdk:5.0.303-nanoserver-1809 AS build_env
+FROM mcr.microsoft.com/dotnet/sdk:5.0.401-nanoserver-1809 AS build_env
 
 # copy the code
 COPY docker_build/Azure.Sdk.Tools.TestProxy/ /proxyservercode
@@ -6,7 +6,7 @@ COPY docker_build/Azure.Sdk.Tools.TestProxy/ /proxyservercode
 # publish the package
 RUN cd /proxyservercode && dotnet publish -c Release -o /proxyserver -f net5.0
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0.3-nanoserver-1809 AS build
+FROM mcr.microsoft.com/dotnet/aspnet:5.0.10-nanoserver-1809 AS build
 
 # Copy PowerShell Core from the installer container
 ENV ProgramFiles="C:\Program Files" \
@@ -30,11 +30,19 @@ ENV ProgramFiles="C:\Program Files" \
     # this override allows the tool server to listen to traffic over the docker bridge.
     # default URL of localhost:5000 or localhost:50001 are not usable from outside the container
     ASPNETCORE_URLS="http://0.0.0.0:5000;https://0.0.0.0:5001"
-    
+
 # while it may seem a bit strange to use "etc" on a windows container. We are mirroring
 # the methodology from the primary container, which is linux.
 RUN mkdir certwork & mkdir etc & cd etc & mkdir testproxy
 ADD docker_build/dotnet-devcert.pfx certwork
+
+# we still need to import this certificate to ensure it's available to all users. there is _something_ gnarly going on that purely having the cert 
+# available through the environment variables is causing some inconsistent weirdness.    
+COPY --from=build_env ["C:/Program Files/dotnet/sdk/5.0.401/DotnetTools/dotnet-dev-certs/5.0.10-servicing.21410.22/tools/net5.0/any/", "C:/dotnet-dev-certs/"]
+
+USER ContainerAdministrator
+RUN dotnet /dotnet-dev-certs/dotnet-dev-certs.dll https --clean --import /certwork/dotnet-devcert.pfx -p "password"
+USER ContainerUser
 
 WORKDIR /proxyserver
 
