Updates to Identity Resolver (#2085)
* Fix up identity resolver to make it more reliable, publish notification configuration as a tool

* Combine CodeOwners parser tools into a single library

* Switch codeownersparser to netstandard2.0

* Add dotnet tool for retrieving codeowners info

* Add tool for retrieving codeowners

* Use both username and email to resolve queuing user

* Specify dotnet sdk version

--- a/tools/notification-configuration/github-codeowner-subscriber/Azure.Sdk.Tools.GithubCodeownerSubscriber.csproj
+++ b/tools/notification-configuration/github-codeowner-subscriber/Azure.Sdk.Tools.GithubCodeownerSubscriber.csproj
@@ -1,9 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>github_codeowner_subscriber</RootNamespace>
+    <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Azure.Sdk.Tools.GithubCodeownerSubscriber</RootNamespace>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>github-codeowner-subscriber</ToolCommandName>
   </PropertyGroup>
 
   <ItemGroup>
@@ -12,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\code-owners-parser\CodeOwnersParser\Azure.Sdk.Tools.CodeOwnersParser.csproj" />
     <ProjectReference Include="..\common\common.csproj" />
   </ItemGroup>
 
