--- a/tools/CreateRuleFabricBot/CreateRuleFabricBotTests/CreateRuleFabricBotTests.csproj
+++ b/tools/CreateRuleFabricBot/CreateRuleFabricBotTests/CreateRuleFabricBotTests.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
   </PropertyGroup>
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\code-owners-parser\CodeOwnersParser\Azure.Sdk.Tools.CodeOwnersParser.csproj" />
     <ProjectReference Include="..\CreateRuleFabricBot\CreateRuleFabricBot.csproj" />
   </ItemGroup>
 
