--- a/tools/notification-configuration/common/common.csproj
+++ b/tools/notification-configuration/common/common.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-     <TargetFramework>netcoreapp3.1</TargetFramework>
+     <IsPackable>false</IsPackable>
+     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
