--- a/tools/notification-configuration/identity-resolver/Azure.Sdk.Tools.IdentityResolver.csproj
+++ b/tools/notification-configuration/identity-resolver/Azure.Sdk.Tools.IdentityResolver.csproj
@@ -2,13 +2,17 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>NotificationConfiguration</RootNamespace>
+    <TargetFramework>net5.0</TargetFramework>
+    <RootNamespace>Azure.Sdk.Tools.IdentityResolver</RootNamespace>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>identity-resolver</ToolCommandName>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <PackageReference Include="System.CommandLine.DragonFruit" Version="0.3.0-alpha.19317.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="CommandLine.Net" Version="2.3.0" />
   </ItemGroup>
 
   <ItemGroup>
