set package name as "@azure-tools/mock-service-host" (#2137)
* azure-tools-scope

* unpublish

* dont-publish

* package-name

* clear

--- a/tools/mock-service-host/ci.yml
+++ b/tools/mock-service-host/ci.yml
@@ -58,7 +58,7 @@ stages:
           workingDirectory: $(System.DefaultWorkingDirectory)/tools/mock-service-host
           condition: contains(variables['imageName'], 'ubuntu')
 
-        - script: 'cp mock-service-host-*.tgz $(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)'
+        - script: 'cp azure-tools-mock-service-host-*.tgz $(VAR_BUILD_ARTIFACT_STAGING_DIRECTORY)'
           displayName: 'copy to staging dir'
           workingDirectory: $(System.DefaultWorkingDirectory)/tools/mock-service-host
           condition: contains(variables['imageName'], 'ubuntu')
