--- a/tools/mock-service-host/package.json
+++ b/tools/mock-service-host/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mock-service-host",
+  "name": "@azure-tools/mock-service-host",
   "version": "0.1.3",
   "description": "Azure Mock Service Host",
   "main": "index.js",
