Fully automate stress cluster buildout and add support for azure file share mounting (#2106)
- Fully automate cluster buildout. Add azure file share mount to stress tests.
    - Moving the test/ad-hoc cluster back to the playground subscription
    - Upgrading kubernetes cluster version to 1.21.x to pull in support for the azure csi file driver
    - Adding high memory agent nodes to the base deployment
    - Enabling node autoscaler in the base deployment
- Publish stress watcher image in CI. Run docker build on PR
    - Using common image location across stress clusters to simplify buildout+deployment
- Add stress test debug file share usage example

Resolves #1903

--- a/tools/stress-cluster/chaos/examples/stress-debug-share-example/Chart.yaml
+++ b/tools/stress-cluster/chaos/examples/stress-debug-share-example/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: deployment-example
-description: An example stress test chart for performing azure resource deployments
+name: debug-share-example
+description: An example stress test chart that uses a file share for debugging (e.g. for large log files, heap dumps)
 version: 0.1.1
 appVersion: v0.1
 annotations:
