--- a/eng/containers/ci.yml
+++ b/eng/containers/ci.yml
@@ -22,6 +22,12 @@ parameters:
     dockerFile: 'tools/test-proxy/docker/dockerfile-win'
     stableTags:
     - 'latest'
+  - name: stress_watcher
+    pool: 'ubuntu-20.04'
+    dockerRepo: 'stress/watcher'
+    dockerFile: 'tools/stress-cluster/services/Stress.Watcher/Dockerfile'
+    stableTags:
+    - 'latest'
 
 trigger:
   branches:
@@ -32,8 +38,18 @@ trigger:
     - eng/containers/
     - tools/test-proxy/docker/
     - tools/keyvault-mock-attestation/Dockerfile
+    - tools/stress-cluster/services/Stress.Watcher/Dockerfile
 
-pr: none
+pr:
+  branches:
+    include:
+    - main
+  paths:
+    include:
+    - eng/containers/
+    - tools/test-proxy/docker/
+    - tools/keyvault-mock-attestation/Dockerfile
+    - tools/stress-cluster/services/Stress.Watcher/Dockerfile
 
 variables:
   - name: containerRegistry
@@ -64,6 +80,7 @@ jobs:
 
         - task: Docker@2
           displayName: Push ${{ config.name }}:$(imageTag)
+          condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
           inputs:
             containerRegistry: $(containerRegistry)
             repository: ${{ config.dockerRepo }}
@@ -81,6 +98,8 @@ jobs:
 
           - task: Docker@2
             displayName: Push ${{ config.name }}:${{ stableTag }}
+            condition: and(succeeded(), ne(variables['Build.Reason'], 'PullRequest'))
+
             inputs:
               containerRegistry: $(containerRegistry)
               repository: ${{ config.dockerRepo }}
