Update notifications.yml  (#2132)
* Update notifications.yml to pull tools from DevOps feed. Update the command name of notification-creator tool

* Move tools versions into the globals variables file

--- a/tools/notification-configuration/notification-creator/Azure.Sdk.Tools.NotificationConfiguration.csproj
+++ b/tools/notification-configuration/notification-creator/Azure.Sdk.Tools.NotificationConfiguration.csproj
@@ -4,7 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <PackAsTool>true</PackAsTool>
-    <ToolCommandName>notification-configuration</ToolCommandName>
+    <ToolCommandName>notification-creator</ToolCommandName>
     <RootNamespace>Azure.Sdk.Tools.NotificationConfiguration</RootNamespace>
   </PropertyGroup>
 
