--- a/eng/pipelines/notifications.yml
+++ b/eng/pipelines/notifications.yml
@@ -1,6 +1,6 @@
 # Configure notifications in Azure DevOps
-
 trigger: none
+
 pr: none
 
 stages:
@@ -34,47 +34,55 @@ stages:
     variables:
       Organization: azure-sdk
       Project: internal
+      DotNetDevOpsFeed: "https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-net/nuget/v3/index.json"
 
     steps:
 
-      - task: UseDotNet@2
-        displayName: 'Use .NET Core sdk $(DotNetCoreVersion)'
+      - task: DotNetCoreCLI@2
+        displayName: 'Install Notification Creator'
         inputs:
-          version: '$(DotNetCoreVersion)'
+          command: custom
+          custom: 'tool'
+          arguments: 'install --global --add-source "$(DotNetDevOpsFeed)" --version "$(NotificationsCreatorVersion)" "Azure.Sdk.Tools.NotificationConfiguration"'
+          workingDirectory: '$(Agent.BuildDirectory)'
 
-      # TODO: Publish package to a private feed so we don't have to build from source
-      - script: "dotnet run --
-          --organization $(Organization)
-          --project $(Project)
-          --path-prefix \"\\$(PathPrefix)\"
-          --token-variable-name DEVOPS_TOKEN
-          --selection-strategy Scheduled
-          $(AdditionalParameters)"
+      - task: DotNetCoreCLI@2
+        displayName: 'Install CodeOwners Subscriber'
+        inputs:
+          command: custom
+          custom: 'tool'
+          arguments: 'install --global --add-source "$(DotNetDevOpsFeed)" --version "$(CodeOwnersSubscriberVersion)" "Azure.Sdk.Tools.GithubCodeownerSubscriber"'
+          workingDirectory: '$(Agent.BuildDirectory)'
 
+      - pwsh: |
+          notification-configuration `
+            --organization $(Organization) `
+            --project $(Project) `
+            --path-prefix \"\\$(PathPrefix)\" `
+            --token-variable-name DEVOPS_TOKEN `
+            --selection-strategy Scheduled `
+            $(AdditionalParameters)
         displayName: 'Run Team/Notification Creator'
-        workingDirectory: $(Build.SourcesDirectory)/tools/notification-configuration/notification-creator/
         env:
           DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
           DOTNET_CLI_TELEMETRY_OPTOUT: 1
           DOTNET_MULTILEVEL_LOOKUP: 0
           DEVOPS_TOKEN: $(azure-sdk-notification-tools-pat)
 
-      # TODO: Publish package to a private feed so we don't have to build from source
-      - script: "dotnet run --
-          --organization $(Organization)
-          --project $(Project)
-          --path-prefix \"\\$(PathPrefix)\"
-          --dev-ops-token-var DEVOPS_TOKEN
-          --aad-app-id-var APP_ID
-          --aad-app-secret-var APP_SECRET
-          --aad-tenant-var AAD_TENANT
-          --kusto-url-var KUSTO_URL
-          --kusto-database-var KUSTO_DB
-          --kusto-table-var KUSTO_TABLE
-          $(AdditionalParameters)"
-
+      - pwsh: | 
+          github-codeowner-subscriber `
+            --organization $(Organization) `
+            --project $(Project) `
+            --path-prefix \"\\$(PathPrefix)\" `
+            --dev-ops-token-var DEVOPS_TOKEN `
+            --aad-app-id-var APP_ID `
+            --aad-app-secret-var APP_SECRET `
+            --aad-tenant-var AAD_TENANT `
+            --kusto-url-var KUSTO_URL `
+            --kusto-database-var KUSTO_DB `
+            --kusto-table-var KUSTO_TABLE `
+            $(AdditionalParameters)
         displayName: 'Run GitHub CODEOWNER Subscriber'
-        workingDirectory: $(Build.SourcesDirectory)/tools/notification-configuration/github-codeowner-subscriber
         env:
           DOTNET_SKIP_FIRST_TIME_EXPERIENCE: 1
           DOTNET_CLI_TELEMETRY_OPTOUT: 1
