--- a/eng/pipelines/templates/variables/globals.yml
+++ b/eng/pipelines/templates/variables/globals.yml
@@ -3,3 +3,5 @@ variables:
   skipComponentGovernanceDetection: true
   DotNetCoreVersion: '3.1.405'
   NugetSecurityAnalysisWarningLevel: 'none'
+  NotificationsCreatorVersion: '1.0.0-dev.20211018.1'
+  CodeOwnersSubscriberVersion: '1.0.0-dev.20211018.1'
