Consume updated tool with updated tool name (#2151)

--- a/eng/pipelines/notifications.yml
+++ b/eng/pipelines/notifications.yml
@@ -55,7 +55,7 @@ stages:
           workingDirectory: '$(Agent.BuildDirectory)'
 
       - pwsh: |
-          notification-configuration `
+          notification-creator `
             --organization $(Organization) `
             --project $(Project) `
             --path-prefix \"\\$(PathPrefix)\" `
