Normalize the PR triggers (#2154)

--- a/tools/mock-service-host/ci.yml
+++ b/tools/mock-service-host/ci.yml
@@ -12,6 +12,20 @@ trigger:
   branches:
     include:
       - main
+      - feature/*
+      - release/*
+      - hotfix/*
+  paths:
+    include:
+      - tools/mock-service-host
+
+pr:
+  branches:
+    include:
+      - main
+      - feature/*
+      - release/*
+      - hotfix/*
   paths:
     include:
       - tools/mock-service-host
