Feature/build break (#2186)
* Fix build break

--- a/src/dotnet/APIView/APIView/APIView.csproj
+++ b/src/dotnet/APIView/APIView/APIView.csproj
@@ -5,6 +5,7 @@
     <ApplicationIcon />
     <OutputType>Exe</OutputType>
     <StartupObject />
+    <LangVersion>Latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
