--- a/.azure-pipelines/apiview.yml
+++ b/.azure-pipelines/apiview.yml
@@ -49,7 +49,7 @@ stages:
       - job: 'Build'
 
         pool:
-          vmImage: 'vs2017-win2016'
+          vmImage: 'windows-2019'
 
         steps:
           - task: NodeTool@0
@@ -133,7 +133,7 @@ stages:
           - 'Build'
 
         pool:
-          vmImage: 'vs2017-win2016'
+          vmImage: 'windows-2019'
 
         steps:
 
