--- a/tools/sdk-testgen/packages/autorest.gotest/package.json
+++ b/tools/sdk-testgen/packages/autorest.gotest/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@autorest/gotest",
-    "version": "0.1.0-preview",
+    "version": "1.0.0",
     "description": "Autorest extension for go test generation",
     "main": "dist/index.js",
     "scripts": {
@@ -43,12 +43,12 @@
         "typescript": "^4.2.4"
     },
     "dependencies": {
-        "@autorest/codemodel": "~4.15.0",
-        "@autorest/extension-base": "^3.3.0",
-        "@autorest/go": "4.0.0-preview.24",
+        "@autorest/codemodel": "~4.17.0",
+        "@autorest/extension-base": "~3.3.1",
+        "@autorest/go": "4.0.0-preview.31",
         "@autorest/testmodeler": "~1.0.0",
-        "@azure-tools/codegen": "^2.6.0",
-        "@azure-tools/linq": "~3.1.263",
+        "@azure-tools/codegen": "~2.7.0",
+        "@azure-tools/linq": "~3.1.0",
         "@types/lodash": "~4.14.176",
         "autorest": "^3.2.3",
         "cross-env": "^7.0.3",
