--- a/tools/stress-cluster/cluster/kubernetes/generator/Stress.Generator/Stress.Generator.csproj
+++ b/tools/stress-cluster/cluster/kubernetes/generator/Stress.Generator/Stress.Generator.csproj
@@ -3,9 +3,15 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <PackAsTool>true</PackAsTool>
+    <ToolCommandName>stress-test-generator</ToolCommandName>
     <RootNamespace>Stress.Generator</RootNamespace>
     <Nullable>enable</Nullable>
     <WarningsAsErrors>CS8600;CS8602;CS8603</WarningsAsErrors>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.8.0" />
+  </ItemGroup>
 
 </Project>
