Stress test usability updates (#2199)
- Stress test usability feedback
- Add schedule and duration to network chaos

--- a/tools/stress-cluster/chaos/examples/network-stress-example/templates/testjob.yaml
+++ b/tools/stress-cluster/chaos/examples/network-stress-example/templates/testjob.yaml
@@ -6,6 +6,8 @@ metadata:
     testName: packet-loss
     chaos: "true"
 spec:
+  nodeSelector:
+    sku: 'default'
   containers:
     - name: network-example
       command: ["bash", "poll.sh"]
