[OAV] Converter Prototype (#2207)
* add new tool oav-traffic-converter, a typescript cli tool that will convert azsdk test-proxy recordings to the payload format required by the liveValidation within `oav`

--- a/.gitignore
+++ b/.gitignore
@@ -487,3 +487,8 @@ src/dotnet/APIView/APIViewWeb/wwwroot/js/*.js*
 # npm
 *-lock.json
 src/swift/SwiftAPIView.xcworkspace/xcuserdata
+
+# oav converter
+tools/oav-traffic-converter/input-example/
+tools/oav-traffic-converter/output-example/
+tools/oav-traffic-converter/build/
