add package-lock.json and fix nuget warning (#2228)
* add package.json and fix nuget warning

--- a/tools/js-mgmt-sdk-release-tools/ci.yml
+++ b/tools/js-mgmt-sdk-release-tools/ci.yml
@@ -31,9 +31,13 @@ pr:
       - tools/js-mgmt-sdk-release-tools
 
 variables:
-  NodeVersion: '14.x'
-  VAR_ARTIFACT_NAME: "drop"
-  VAR_BUILD_ARTIFACT_STAGING_DIRECTORY: $(Build.ArtifactStagingDirectory)
+  - template: ../../eng/pipelines/templates/variables/globals.yml
+  - name: NodeVersion
+    value: '14.x'
+  - name: VAR_ARTIFACT_NAME
+    value: 'drop'
+  - name: VAR_BUILD_ARTIFACT_STAGING_DIRECTORY
+    value: $(Build.ArtifactStagingDirectory)
 
 stages:
   - stage: InstallAndBuild
