--- a/tools/mock-service-host/package.json
+++ b/tools/mock-service-host/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@azure-tools/mock-service-host",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "description": "Azure Mock Service Host",
   "main": "index.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "build": "tsc && npm run copyfiles",
     "copyfiles": "copyfiles -a \"./test/testData/**/*.json\" ./dist",
     "unit-test": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --config ./jest.unittest.config.js",
-    "test": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit",
+    "test": "npm run build && cross-env NODE_ENV=test jest --ci --reporters=default --reporters=jest-junit --runInBand",
     "eslint-fix": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --fix",
     "eslint": "eslint . --ext .ts --ignore-pattern node_modules/ --ignore-pattern dist/ --quiet",
     "test-report": "npm run build && nyc mocha dist/test --recursive"
@@ -35,7 +35,7 @@
     "lodash": "^4.17.15",
     "mockjs": "^1.1.0",
     "oauth2-mock-server": "^3.1.0",
-    "oav": "~2.8.3",
+    "oav": "~2.10.2",
     "reflect-metadata": "^0.1.13",
     "simple-git": "^2.38.0",
     "winston": "^3.3.3"
