--- a/tools/stress-cluster/services/Stress.Watcher/src/Stress.Watcher.csproj
+++ b/tools/stress-cluster/services/Stress.Watcher/src/Stress.Watcher.csproj
@@ -11,6 +11,9 @@
     <PackageReference Include="KubernetesClient" Version="6.0.1" />
     <PackageReference Include="Serilog" Version="2.10.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.0" />
+    <PackageReference Include="Azure.Identity" Version="1.5.0" />
+    <PackageReference Include="Azure.ResourceManager" Version="1.0.0-beta.4" />
+    <PackageReference Include="dotenv.net" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
