Add cluster provisioner secrets and documentation for stress watcher deployment. (#2266)
* Add cluster provisioner secrets and documentation for stress watcher deployment.

* Update stress cluster prod deployment values

* Fix missing volume mounts for debug file share account secret

* Bump stress test addons to 0.1.12

--- a/tools/stress-cluster/cluster/kubernetes/stress-infrastructure/Chart.yaml
+++ b/tools/stress-cluster/cluster/kubernetes/stress-infrastructure/Chart.yaml
@@ -27,3 +27,7 @@ dependencies:
 - name: chaos-mesh
   version: 0.5.1
   repository: https://charts.chaos-mesh.org
+  condition: deploy.chaosmesh
+- name: stress-test-addons
+  version: 0.1.12
+  repository: https://stresstestcharts.blob.core.windows.net/helm/
