--- a/tools/stress-cluster/cluster/kubernetes/stress-test-addons/values.yaml
+++ b/tools/stress-cluster/cluster/kubernetes/stress-test-addons/values.yaml
@@ -1,31 +1,31 @@
 env: test
 appInsightsKeySecretName:
   test: appInsightsInstrumentationKey-tbiruti6oi24k
-  prod: appInsightsInstrumentationKey-dqojlttkovp2c
+  prod: appInsightsInstrumentationKey-xy7l7a2zaohws
   dev: ""
 debugStorageKeySecretName:
   test: debugStorageKey-tbiruti6oi24k
-  prod: ""
+  prod: debugStorageKey-xy7l7a2zaohws
   dev: ""
 debugStorageAccountSecretName:
   test: debugStorageAccount-tbiruti6oi24k
-  prod: ""
+  prod: debugStorageAccount-xy7l7a2zaohws
   dev: ""
 debugFileShareName:
   test: stressfilestbiruti6oi24k
-  prod: ""
+  prod: stressfilesxy7l7a2zaohws
   dev: ""
 staticTestSecretsKeyvaultName:
   test: stress-secrets-test
-  prod: StressSecretsProd
+  prod: stress-secrets-prod
   dev: ""
 clusterTestSecretsKeyvaultName:
   test: stress-kv-tbiruti6oi24k
-  prod: stress-kv-dqojlttkovp2c
+  prod: stress-kv-xy7l7a2zaohws
   dev: ""
 secretProviderIdentity:
   test: 9eca3e6f-842f-495f-b106-4f3331406e79
-  prod: ea706f92-1d9a-4611-9cde-8305aa3d9e98
+  prod: c5454d90-811d-4d37-b685-f48d6f689aa3
   dev: ""
 subscription:
   test: public
