--- a/tools/code-owners-parser/ci.yml
+++ b/tools/code-owners-parser/ci.yml
@@ -26,3 +26,10 @@ extends:
   parameters:
     ToolDirectory: tools/code-owners-parser
     DotNetCoreVersion: 5.0.301
+    TestPostSteps:
+      # This is a simple test for placeholder. Will replace the test with get-codeowners.ps1 in future.
+      - pwsh: |
+          $output = dotnet run --project "tools\code-owners-parser\Azure.Sdk.Tools.RetrieveCodeOwners\Azure.Sdk.Tools.RetrieveCodeOwners.csproj" `
+                      --code-owner-file-path "$(Build.SourcesDirectory)/tools/code-owners-parser/Azure.Sdk.Tools.RetrieveCodeOwners.Tests/CODEOWNERS" --target-directory "sdk"
+          $output | ConvertFrom-Json
+        displayName: Test on code owner tool output
