Install and Run code owner tools in get-codeowner.ps1 (#2322)
Test pipeline on cpp:
https://dev.azure.com/azure-sdk/internal/_build/results?buildId=1208729&view=logs&j=76992fd1-2312-5fae-7c45-7baba86b87ae

--- a/tools/code-owners-parser/Azure.Sdk.Tools.RetrieveCodeOwners.Tests/CODEOWNERS
+++ b/tools/code-owners-parser/Azure.Sdk.Tools.RetrieveCodeOwners.Tests/CODEOWNERS
@@ -24,6 +24,9 @@
 # PRLabel: %label
 /sdk/eventhubs/ @person7 @person8
 
+# This is for testing non user aliases case.
+/sdk/testUser/ @azure/azure-sdk-eng  @azure-sdk
+
 # Example for service that does not have the code in the repo but wants issues to be labeled
 # Notice the use of the moniker /<NotInRepo>/
 # ServiceLabel: %label %Service Attention
