[Test-Proxy] Change storage directory from `/etc/testproxy` -> `/srv/testproxy` (#2333)
`/etc` really is for configuration. In the interests of consistency, we're adjusting this so that we don't go against people's regular expectations.

I'm running a `docker-containers-publish` manually off this branch so that I can also update the the targeted docker tag _in this PR_ all in one shot.

--- a/tools/test-proxy/docker/dockerfile
+++ b/tools/test-proxy/docker/dockerfile
@@ -34,7 +34,8 @@ RUN \
     # Run script to import certificate
     && chmod +x $CERT_FOLDER/$CERT_IMPORT_SH \
     && $CERT_FOLDER/$CERT_IMPORT_SH \
-    && rm $CERT_FOLDER/$CERT_IMPORT_SH
+    && rm $CERT_FOLDER/$CERT_IMPORT_SH \
+    && mkdir -p /srv/testproxy
 
 EXPOSE 5000 5001
 
@@ -42,4 +43,4 @@ WORKDIR /proxyserver
 
 COPY --from=build /proxyserver .
 
-ENTRYPOINT ["dotnet", "Azure.Sdk.Tools.TestProxy.dll", "--storage-location", "/etc/testproxy"]
+ENTRYPOINT ["dotnet", "Azure.Sdk.Tools.TestProxy.dll", "--storage-location", "/srv/testproxy"]
