--- a/tools/code-owners-parser/ci.yml
+++ b/tools/code-owners-parser/ci.yml
@@ -20,6 +20,7 @@ pr:
   paths:
     include:
       - tools/code-owners-parser
+      - eng/common/scripts/get-codeowners.ps1
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
