Added more test on tool library (#2340)

--- a/tools/code-owners-parser/ci.yml
+++ b/tools/code-owners-parser/ci.yml
@@ -29,7 +29,7 @@ extends:
     DotNetCoreVersion: 5.0.301
     TestPostSteps:
       - task: PowerShell@2
-        displayName: Test on code owner tool output
+        displayName: Test on code owner script
         inputs:
           pwsh: true
           filePath: eng/common/scripts/get-codeowners.ps1
