Stress test pipeline auto-discover stress test (#2331)
This change allows the stress test pipeline to discover and run the stress tests

--- a/eng/pipelines/stress-test-release.yml
+++ b/eng/pipelines/stress-test-release.yml
@@ -11,7 +11,7 @@ parameters:
     default: prod
   - name: ClusterGroup
     type: string
-    default: rg-stress-test-cluster-prod
+    default: rg-stress-cluster-prod
   - name: TestRepository
     displayName: Stress Test Repository
     type: string
