--- a/tools/test-proxy/ci.yml
+++ b/tools/test-proxy/ci.yml
@@ -25,4 +25,4 @@ extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-tool-dotnet.yml
   parameters:
     ToolDirectory: tools/test-proxy
-    DotNetCoreVersion: "5.0.100"
+    DotNetCoreVersion: "3.x"
